--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6"
+    },
+    "autoload": {
+    "psr-4": {
+        "App\\": "app/",
+        "Core\\": "core/",
+        "Configs\\": "configs/",
+        "Traits\\": "traits/"
+        }
     }
+
 }
