--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_PORT='YOUR_PORT'
 DB_USER='YOUR_USER'
 DB_PASSWORD='YOUR_PASSWORD'
 DB_DATABASE='YOUR_DATABASE'
+
+MONGO_HOST='YOUR_HOST'
+MONGO_PORT='YOUR_PORT'
