--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "php-di/php-di": "^7.1"
+        "php-di/php-di": "^7.1",
+        "mongodb/mongodb": "^2.1"
     },
     "autoload": {
     "psr-4": {
