--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "App\\": "app/",
         "Core\\": "core/",
         "Configs\\": "configs/",
-        "Traits\\": "traits/"
+        "Traits\\": "traits/",
+        "Supports\\": "supports/"
         }
     }
 }
